--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <ul class="nav-list">
         <li class="nav-item"><a href="#">Home</a></li>
         <li class="nav-item">
-          <a href="./contributors.html">Contributors</a>
+          <a href="#">Contributors</a>
         </li>
         <li class="nav-item"><a href="./About.html">About</a></li>
       </ul>
